# arm_control

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/arm_interface/include/arm_interface/arm_interface/: arm_interface.h  arm_module_info.h  arm_pinocchio_mapping.h  arm_precomputation.h  arm_wb_pinocchio_mapping.h
install/arm_interface/share/arm_interface/: local_setup.sh  package.dsv  package.ps1  package.sh
install/moying_arm_description/share/moying_arm_description/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/moying_arm_description/share/moying_arm_description/config/: arm_controllers.yaml
install/moying_arm_description/share/moying_arm_description/gazebo/: moying_arm.gazebo.xacro
install/moying_arm_description/share/moying_arm_description/launch/: display.launch.py  gazebo.launch.py
install/moying_arm_description/share/moying_arm_description/ros2_control/: arm_ros2_control.xacro
install/moying_arm_description/share/moying_arm_description/urdf/: moying_arm_transmissions.xacro
install/moying_arm_hardware/share/moying_arm_hardware/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ur5_arm/share/ur5_arm/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ur5_arm/share/ur5_arm/cmake/: ur5_armConfig.cmake
install/ur5_arm/share/ur5_arm/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  physical_parameters.yaml  ros2_controllers.yaml  ur_controllers.yaml
install/ur5_arm/share/ur5_arm/gazebo/: sim_env.world
install/ur5_arm/share/ur5_arm/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  ur5_control.launch.py  ur5_moveit.launch.py  ur_control.launch.py  warehouse_db.launch.py
install/ur5_arm/share/ur5_arm/srdf/: ur.srdf
install/ur5_arm/share/ur5_arm/urdf/: hand.urdf.xacro  hand_ros2_control.xacro  hand_simply.urdf.xacro  ur.ros2_control.xacro  ur.urdf.xacro  ur_macro.xacro  ur_urdf.xacro
install/ur5_bringup/share/ur5_bringup/: package.sh
install/ur5_controller/share/ur5_controller/: package.dsv  package.ps1  package.sh
install/ur5_gripper_description/share/ur5_gripper_description/: local_setup.sh  package.sh
install/ur5_gripper_description/share/ur5_gripper_description/config/: initial_positions.yaml
install/ur5_gripper_description/share/ur5_gripper_description/urdf/: hand.urdf.xacro  initial_positions.yaml  output.urdf  ur.urdf.xacro  ur5.ros2_control.xacro  ur5.urdf.xacro  ur5_macro.xacro  ur5_robotiq85_gripper.urdf.xacro  ur5_simply.urdf.xacro  ur_macro.xacro
install/ur5_gripper_moveit_config/share/ur5_gripper_moveit_config/: package.sh
install/ur5_gripper_moveit_config/share/ur5_gripper_moveit_config/config/: controllers.yaml  hand.urdf.xacro  (+5 more)
install/ur5_interface/include/ur5_interface/: factory_functions.h  package_path.h.in  ur5_module_info.h
install/ur5_interface/share/ur5_interface/: package.bash  package.dsv  package.sh  package.zsh
install/ur5_robot/share/ur5_robot/: .setup_assistant  package.sh
log/: latest_build
src/moying_arm/: README.md
src/moying_arm/arm_controller/: CMakeLists.txt  arm_controller.xml  package.xml
src/moying_arm/arm_controller/include/arm_controller/: arm_controller.hpp  validate_arm_controller_parameters.hpp  visibility_control.h
src/moying_arm/arm_controller/src/: arm_controller.cpp  arm_controller.yaml
src/moying_arm/arm_interface/: CMakeLists.txt
src/moying_arm/arm_interface/src/: arm_interface.cpp  arm_pinocchio_mapping.cpp  arm_precomputation.cpp  factory_functions.cpp
src/moying_arm/moying_arm/: README.md
src/moying_arm/moying_arm/moying_arm_bringup/: CMakeLists.txt  package.xml
src/moying_arm/moying_arm/moying_arm_bringup/config/: arm_driver.yaml  chassis_driver.yaml  moying_arm_controllers.yaml  right_arm_driver.yaml  robot_controllers.yaml
src/moying_arm/moying_arm/moying_arm_bringup/launch/: arm.launch.py  moying_arm.launch.py
src/moying_arm/moying_arm/moying_arm_description/: CMakeLists.txt
src/moying_arm/moying_arm/moying_arm_hardware/: CMakeLists.txt  moying_arm_hardware.xml
src/ur5_ros2/: README.md
src/ur5_ros2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/ur5_ros2/log/: latest_build
src/ur5_ros2/ur5_arm/install/: local_setup.sh  setup.sh
src/ur5_ros2/ur5_arm/log/: latest_build
src/ur5_ros2/ur5_arm/ur5_bringup/: CMakeLists.txt
src/ur5_ros2/ur5_arm/ur5_description/: package.xml
src/ur5_ros2/ur5_controller/: CMakeLists.txt  package.xml
src/ur5_ros2/ur5_controller/include/: visibility_control.h
src/ur5_ros2/ur5_controller/include/ur5_controller/: ur5_controller.hpp
src/ur5_ros2/ur5_controller/install/: local_setup.sh  setup.ps1  setup.sh
src/ur5_ros2/ur5_controller/log/: latest_build
src/ur5_ros2/ur5_controller/src/: ur5_controller.cpp  ur5_controller.yaml
src/ur5_ros2/ur5_interface/: CMakeLists.txt
src/ur5_ros2/ur5_interface/config/ur5/: task.info
src/ur5_ros2/ur5_interface/include/: ur5_pinocchio_mapping.h
src/ur5_ros2/ur5_interface/include/dynamics/: ur5_dynamics.h
src/ur5_ros2/ur5_interface/include/ur5_interface/: package_path.h.in  ur5_interface.h  ur5_precomputation.h  ur5_wb_pinocchio_mapping.h
src/ur5_ros2/ur5_interface/include/ur5_interface/command/: ur5_target_trajectories_interactive_marker.h
src/ur5_ros2/ur5_interface/include/ur5_interface/constraint/: base_constraint.h
src/ur5_ros2/ur5_interface/install/: local_setup.sh  setup.sh
src/ur5_ros2/ur5_interface/log/: latest_build
src/ur5_ros2/ur5_interface/src/: factory_functions.cpp  ur5_interface.cpp  ur5_pinocchio_mapping.cpp  ur5_precomputation.cpp
src/ur5_ros2/ur5_interface/src/command/: joy_target_trajectories.cpp  ur5_target_trajectories_interactive_marker.cpp
src/ur5_ros2/ur5_interface/src/constraint/: base_constraint.cpp  end_effort_constraint.cpp
src/ur5_ros2/ur5_interface/src/dynamics/: ur5_dynamics.cpp
(+124 files in other folders)
