<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_controller</name>
  <version>0.0.0</version>
  <description>controller</description>
  <maintainer email="wobudajianpan@gmail.com">Jianming Yao</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>generate_parameter_library</build_depend>
  <build_depend>rosidl_generator_cpp</build_depend>

  <depend>control_msgs</depend>

  <depend>controller_interface</depend>

  <depend>hardware_interface</depend>

  <depend>pluginlib</depend>

  <depend>rclcpp</depend>

  <depend>rclcpp_lifecycle</depend>

  <depend>realtime_tools</depend>

  <depend>std_srvs</depend>

  <depend>localization_msgs</depend>
  <depend>ocs2_ros_interfaces</depend>
  <depend>ocs2_core</depend>
  <depend>ocs2_ddp</depend>
  <depend>ocs2_mpc</depend>
  <depend>ocs2_robotic_tools</depend>
  <depend>cos2_robotic_assets</depend>
  <depend>ocs2_pinocchio_interface</depend>
  <depend>ocs2_self_collision</depend>
  <depend>cos2_self_collision_visualization</depend>
  <depend>ocs2_mobile_manipulator</depend>
  <depend>arm_interface</depend>

  <depend>hpp-fcl</depend>
  <depend>pinocchio</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <controller_interface plugin="${prefix}/arm_controller.xml"/>
    <resource_file>config/arm_interface/task.info</resource_file>
  </export>
</package>
